  - Speed-up group milestones show page
  - Fix inconsistent options dropdown caret on mobile viewports (ClemMakesApps)
  - Extract project#update_merge_requests and SystemHooks to its own worker from GitPushService
  - Don't include archived projects when creating group milestones. !4940 (Jeroen Jacobs)
  - Add tag shortcut from the Commit page. !6543
  - Keep refs for each deployment
  - Allow browsing branches that end with '.atom'
  - Log LDAP lookup errors and don't swallow unrelated exceptions. !6103 (Markus Koller)
  - Replace unique keyframes mixin with keyframe mixin with specific names (ClemMakesApps)
  - Add more tests for calendar contribution (ClemMakesApps)
  - Update Gitlab Shell to fix some problems with moving projects between storages
  - Cache rendered markdown in the database, rather than Redis
  - Avoid database queries on Banzai::ReferenceParser::BaseParser for nodes without references
  - Do not alter 'force_remove_source_branch' options on MergeRequest unless specified
  - Simplify Mentionable concern instance methods
  - API: Ability to retrieve version information (Robert Schilling)
  - Fix permission for setting an issue's due date
  - API: Multi-file commit !6096 (mahcsig)
  - Unicode emoji are now converted to images
  - Revert "Label list shows all issues (opened or closed) with that label"
  - Expose expires_at field when sharing project on API
  - Fix VueJS template tags being rendered in code comments
  - Added copy file path button to merge request diff files
  - Fix issue with page scrolling to top when closing or pinning sidebar (lukehowell)
  - Add Issue Board API support (andrebsguedes)
  - Allow the Koding integration to be configured through the API
  - Add new issue button to each list on Issues Board
  - Added soft wrap button to repository file/blob editor
  - Update namespace validation to forbid reserved names (.git and .atom) (Will Starms)
  - Add word-wrap to issue title on issue and milestone boards (ClemMakesApps)